解决程序卡顿问题